kubefiles/elasticsearch-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: elasticsearch
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: elasticsearch
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xmx256m -Xms256m
        image: kiodo/elasticsearch
        name: elasticsearch
        ports:
        - containerPort: 9200
        resources: {}
      restartPolicy: Always
status: {}
