kubefiles/logstash-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: logstash
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: logstash
    spec:
      containers:
      - env:
        - name: LS_JAVA_OPTS
          value: -Xmx256m -Xms256m
        image: kiodo/klogstash
        name: logstash
        ports:
        - containerPort: 5000
        resources: {}        
      restartPolicy: Always
status: {}
