kubefiles/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: nginx
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: nginx
    spec:
      containers:
      - env:
        image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /etc/nginx
          name: confignginx
      restartPolicy: Always
      volumes:
      - name: confignginx
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
status: {}
