kubefiles/nginxproxy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginxproxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginxproxy
    spec:
      containers:
      - image: mhowlett/ngx-stub-status-prometheus 
        imagePullPolicy: Always
        name: nginxproxy
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: nginxproxy-configs
          mountPath: /etc/nginx/conf.d
      # Load the configuration files for nginx
      volumes:
        - name: nginxproxy-configs
          configMap:
            name: nginxproxy-config
