kubefiles/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: elasticsearch
  name: elasticsearch
spec:
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
    nodePort: 39200
  selector:
    name: elasticsearch
type: NodePort
