kubefiles/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: logstash
  name: logstash
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
    nodeport: 35000
  selector:
    name: logstash
type: NodePort
