kubefiles/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: nginx
  name: nginx
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
 #   nodePort: 30800
  selector:
    name: nginx
  type: NodePort
