kubefiles/nginxproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: nginxproxy
  name: nginxproxy
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    nodePort: 30003
  selector:
    name: nginxproxy
  type: NodePort
