kubefiles/all-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: all-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /kibana
        backend:
          serviceName: kibana
          servicePort: 5601
