kubefiles/elasticsearch-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress
spec:
        backend:
          serviceName: elasticsearch
          servicePort: 9200
