kubefiles/nginxproxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginxproxy-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  backend:
    serviceName: nginxproxy-ingress
    servicePort: 80
